# roux

./: .gitignore  Cargo.toml  LICENSE.MD  README.md  build.rs  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
.devcontainer/: devcontainer.json
public/: index.ts
scripts/: counter.ts  example-component.ts  index.ts  styles.d.ts
scripts/util/: WebComponent.ts
src/: main.rs
src/routes/: foo.rs  index.rs
templates/: base.html  counter.html  foo.html
