[package]
name = "roux"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
poem = { version = "3.0.0", features = ["static-files"] }
tokio = { version = "1.36.0", features = ["full"] }
